Include XStreamFX code